@@ -1,3 +1,7 @@
+2018/11/14 José Miguel Silva Caldeira <miguel@ncdc.pt>
+
+	* The NSS module only runs for services configured with the PAM module.
+
 2019/11/8 José Miguel Silva Caldeira <miguel@ncdc.pt>
 
 	* It is now possible to store only the real credentials.
